fix : overlap video and canvas fixed

--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,6 @@ label {
   width: 100%;
 }
 
-video, canvas {
+canvas {
   position: absolute;
 }
